--- a/notebooks/.env.example
+++ b/notebooks/.env.example
@@ -1,4 +1,5 @@
 GLOBAL_EXPORT_DATA_DIR_NAME="~/data/Fitbit/Global Export Data"
+CLEAN_DATA_DIR_NAME="~/data/fitbit/cleaned_data"
 WEIGHT_FILE_PREFIX="weight-"
 WEIGHT_FILE_SUFFIX=".json"
 
