--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
 dev = [
     "ipykernel>=6.29.5",
     "jupyterlab>=4.3.1",
+    "pre-commit>=4.0.1",
     "pytest>=8.3.3",
     "ruff>=0.7.2",
 ]
