--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,10 @@ where = ["."]
 pythonpath = [
   "."
 ]
+
+[tool.ruff]
+line-length = 100
+
+[tool.ruff.format]
+quote-style = "single"
+docstring-code-format = true
