--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,14 +34,14 @@ dev = [
 ]
 
 [tool.setuptools]
-package-dir = {"" = "fitbit_data_viewer"}
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
 
 [tool.pytest.ini_options]
 pythonpath = [
-  "."
+  "src"
 ]
 
 [tool.ruff]
