Adds 'workflow_dispatch' to enable manual trigger of GitHub Action.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,6 +8,11 @@ on:
     branches: [ $default-branch ]
   pull_request:
     branches: [ $default-branch ]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        required: false
+        default: 'debug'
 
 permissions:
   contents: read
