--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ".python-version"
+        python-version-file: ".python-version"
 
     - name: Install Python package dependencies for this app
       run: uv sync --all-extras --dev
