--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,16 +3,7 @@
 
 name: Python application
 
-on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        required: false
-        default: 'debug'
+on: [push, pull_request, workflow_dispatch]
 
 permissions:
   contents: read
