--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 ]
 keywords = ["fitbit", "health", "tracking"]
 dependencies = [
+    "matplotlib>=3.10.0",
     "polars>=1.17.1",
     "python-dotenv>=1.0.1",
 ]
